crates/aura-macros/tests/boundaries/comma_joined_guard_capability_name.stderr
error: unexpected token
 --> tests/boundaries/comma_joined_guard_capability_name.rs:5:14
  |
5 |     protocol ExampleProtocol {
  |              ^^^^^^^^^^^^^^^
